--- a/src/styles.scss
+++ b/src/styles.scss
@@ -95,6 +95,5 @@ input {
 
   //shadows
   --box-below-shadow: rgba(255, 0, 0, 0) 0px 1px 1px 0px inset,
-    rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
